# mona

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: adapters.rs  cons.rs  errs.rs  ixs.rs  lib.rs
src/adapters/: alphaq_v1.rs  aquifer_v1.rs  bisonfi_v1.rs  goonfi_v2.rs  humidifi_v1.rs  obric_v2.rs  scorch_v1.rs  solfi_v2.rs  tessera_v1.rs  zerofi_v1.rs
src/ixs/: swap_v1.rs
